manifests/kube-system/netpol-hubble-relay.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: hubble-relay
  namespace: kube-system
spec:
  endpointSelector:
    matchLabels:
      k8s-app: hubble-relay
  ingress:
    - fromEntities:
        - host
      toPorts:
        - ports:
            - port: "4222"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            k8s-app: hubble-ui
      toPorts:
        - ports:
            - port: "4245"
              protocol: TCP
  egress:
    - toEntities:
        - host
        - remote-node
        - kube-apiserver
      toPorts:
        - ports:
            - port: "4244"
              protocol: TCP
