manifests/kube-system/netpol-reloader.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: reloader
  namespace: kube-system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: reloader
  ingress:
    - fromEntities:
        - host
      toPorts:
        - ports:
            - port: "9090"
              protocol: TCP
  egress:
    - toEntities:
        - kube-apiserver
