manifests/kube-system/netpol-snapshot-controller.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: snapshot-controller
  namespace: kube-system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: snapshot-controller
  ingress:
    - fromEntities:
        - host
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEntities:
        - kube-apiserver
