manifests/kube-system/netpol-snapshot-validation-webhook.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: snapshot-validation-webhook
  namespace: kube-system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: snapshot-validation-webhook
  ingress:
    - fromEntities:
        - kube-apiserver
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "8443"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEntities:
        - kube-apiserver
